# nhsdigital.manage-vaccinations-in-schools-reporting

./: .yamllint.yaml  Dockerfile  SECURITY.md  mise.development.toml  mise.production.toml  mise.staging.toml  mise.toml  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-and-push-image.yml  ci.yml  deploy-application.yml  prevent-merging-in-to-main.yml
mavis/: export_root_url.sh
mavis/reporting/: dev_proxy.py  views.py
mavis/reporting/api_client/: client.py
mavis/reporting/helpers/: mavis_helper.py  navigation_helper.py  reporting_context_helper.py  secondary_nav_helper.py
mavis/reporting/templates/: consents.jinja  vaccinations.jinja
mavis/reporting/templates/components/: filters.jinja
mavis/reporting/templates/layouts/: dashboard.jinja
tests/: conftest.py
tests/api_client/: test_client.py
tests/auth/: test_auth.py
tests/helpers/: test_navigation_helper.py  test_secondary_nav_helper.py
tests/models/: test_team.py
