[project]
name = "manage-vaccinations-in-schools-reporting"
version = "0.1.0"
description = "Python/Flask application for the commissioner reporting component of Mavis"
license = { text = "MIT" }
requires-python = ">=3.13,<4.0"
dependencies = [
    "flask==3.1.3",
    "nhsuk-frontend-jinja==0.8.0",
    "gunicorn[http2]>=25.3.0",
    "py-healthcheck>=1.10.1",
    "pyjwt>=2.10.1",
    "sentry-sdk[flask]>=2.58.0",
    "flask-wtf>=1.2.2",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "ruff==0.15.10",
    "pytest>=9.0.3",
    "coverage>=7.10.6",
    "coverage-badge>=1.1.2",
    "pyright>=1.1.405",
    "beautifulsoup4>=4.14.2",
    "yamllint>=1.38.0",
]

[tool.ruff]
output-format = "github"

[tool.ruff.lint]
select = ["ARG", "PL", "E", "W", "F"]
extend-select = ["I"]

[tool.hatch.build.targets.wheel]
packages = []
only-include = ["mavis", "scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath = "."
venv = ".venv"
